# screenshotapi

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.lambda  Dockerfile.simple  Dockerfile.working  Dockerfile.x86  README.md  build.sh  deploy-docker.sh  deploy-with-layers.sh  deploy-working.sh  docker-deploy-simple.sh  docker-deploy.sh  examples.md  payload.b64  response.json  test-payload.json  test_local.sh
.cursor/rules/: lambda.mdc
.github/workflows/: deploy.yml
src/: http_handler.rs  main.rs  screenshot.rs
