[package]
name = "screenshotapi"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
tokio = { version = "1", features = ["macros", "fs"] }
headless_chrome = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
futures = "0.3"
